[gd_scene load_steps=8 format=3 uid="uid://c22nsw8flweb"]

[ext_resource type="Script" path="res://src/model/player.gd" id="1_lbf10"]
[ext_resource type="Texture2D" uid="uid://dgrpi6qlf3vua" path="res://assets/entities/drex3311.png" id="1_ubkg2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yadpu"]
radius = 7.5
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_s4oc4"]
atlas = ExtResource("1_ubkg2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vyeb"]
atlas = ExtResource("1_ubkg2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed1bf"]
atlas = ExtResource("1_ubkg2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0qm7n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4oc4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vyeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed1bf")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 8388609
collision_mask = 8388609
script = ExtResource("1_lbf10")
SPEED = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 7.5)
shape = SubResource("CapsuleShape2D_yadpu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_0qm7n")
animation = &"idle"

[node name="HitstunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ReverseTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="HitstunTimer" to="." method="_on_hitstun_timer_timeout"]
[connection signal="timeout" from="ReverseTimer" to="." method="_on_reverse_timer_timeout"]
